--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="../JS/presupuestos.js"></script>
+    <script src="./JS/presupuestos.js"></script>
     <a></a>
 </body>
 </html>
